--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "ipykernel>=6.30.1",
-    "pandas>=2.3.1",
+    "jupyter>=1.1.1",
 ]
